Bug 567084 - getTextAttributes should return invalid arg if the given offset is wrong, r=marcoz